[tool.poetry]
name = "synapse-test-utils"
version = "0.1.0"
description = ""
authors = ["thewesleyee <wesleyee@sph.com.sg>"]
readme = "README.md"
packages = [{include = "synapse_test_utils"}]
repository = "https://github.com/SPHTech/synapse-test-utils.git"
homepage = "https://github.com/SPHTech/synapse-test-utils.git"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
autobahn = {version = "^22.4.2", extras = ["serialization"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
