[tool.poetry]
name = "synapse-test-utils"
version = "v0.1.0"
description = ""
authors = ["thewesleyee <wesleyee@sph.com.sg>"]
readme = "README.md"
repository = "https://github.com/SPHTech/synapse-test-utils"
homepage = "https://github.com/SPHTech/synapse-test-utils"

[tool.poetry.dependencies]
python = "^3.10"
autobahn = {version = "^22.4.2", extras = ["serialization"]}
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
