[tool.poetry]
name = "synapse-utils"
version = "0.1.0"
description = ""
authors = ["thewesleyee <wesleyee@sph.com.sg>"]
readme = "README.md"
packages = [{include = "synapse_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
autobahn = {version = "^22.4.2", extras = ["serialization"]}
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
